// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`caseStudyMetadata > composes title + canonical from slug 1`] = `
{
  "alternates": {
    "canonical": "/work/codeflow",
  },
  "description": "AI builder.",
  "openGraph": {
    "description": "AI builder.",
    "images": [
      "/api/og?title=CodeFlow&subtitle=AI+builder.&eyebrow=case+study",
    ],
    "title": "CodeFlow · case study",
  },
  "title": "CodeFlow · case study",
  "twitter": {
    "card": "summary_large_image",
    "description": "AI builder.",
    "images": [
      "/api/og?title=CodeFlow&subtitle=AI+builder.&eyebrow=case+study",
    ],
    "title": "CodeFlow · case study",
  },
}
`;

exports[`pageMetadata > builds metadata for "experiments" 1`] = `
{
  "alternates": {
    "canonical": "/experiments",
  },
  "description": "Lab notebook. Fuckups and discoveries.",
  "openGraph": {
    "description": "Lab notebook. Fuckups and discoveries.",
    "images": [
      "/api/og?title=Experiments&subtitle=Lab+notebook.+Fuckups+and+discoveries.",
    ],
    "title": "Experiments — Vaibhav Verma",
  },
  "title": "Experiments — Vaibhav Verma",
  "twitter": {
    "card": "summary_large_image",
    "description": "Lab notebook. Fuckups and discoveries.",
    "images": [
      "/api/og?title=Experiments&subtitle=Lab+notebook.+Fuckups+and+discoveries.",
    ],
    "title": "Experiments — Vaibhav Verma",
  },
}
`;

exports[`pageMetadata > builds metadata for "home" 1`] = `
{
  "alternates": {
    "canonical": "/",
    "types": {
      "application/rss+xml": "/rss.xml",
    },
  },
}
`;

exports[`pageMetadata > builds metadata for "terminal" 1`] = `
{
  "alternates": {
    "canonical": "/terminal",
  },
  "description": "A real shell in your browser. Try \`help\`.",
  "openGraph": {
    "description": "A real shell in your browser. Try \`help\`.",
    "images": [
      "/api/og?title=terminal&subtitle=A+real+shell+in+your+browser.+Try+%60help%60.",
    ],
    "title": "terminal — Vaibhav Verma",
  },
  "title": "terminal — Vaibhav Verma",
  "twitter": {
    "card": "summary_large_image",
    "description": "A real shell in your browser. Try \`help\`.",
    "images": [
      "/api/og?title=terminal&subtitle=A+real+shell+in+your+browser.+Try+%60help%60.",
    ],
    "title": "terminal — Vaibhav Verma",
  },
}
`;

exports[`pageMetadata > builds metadata for "work" 1`] = `
{
  "alternates": {
    "canonical": "/work",
  },
  "description": "Full build log of every project I've shipped.",
  "openGraph": {
    "description": "Full build log of every project I've shipped.",
    "images": [
      "/api/og?title=All+projects&subtitle=Full+build+log+of+every+project+I%27ve+shipped.",
    ],
    "title": "All projects — Vaibhav Verma",
  },
  "title": "All projects — Vaibhav Verma",
  "twitter": {
    "card": "summary_large_image",
    "description": "Full build log of every project I've shipped.",
    "images": [
      "/api/og?title=All+projects&subtitle=Full+build+log+of+every+project+I%27ve+shipped.",
    ],
    "title": "All projects — Vaibhav Verma",
  },
}
`;

exports[`pageMetadata > builds metadata for "writing" 1`] = `
{
  "alternates": {
    "canonical": "/writing",
    "types": {
      "application/rss+xml": "/rss.xml",
    },
  },
  "description": "Notes, essays, build logs.",
  "openGraph": {
    "description": "Notes, essays, build logs.",
    "images": [
      "/api/og?title=Writing&subtitle=Notes%2C+essays%2C+build+logs.",
    ],
    "title": "Writing — Vaibhav Verma",
  },
  "title": "Writing — Vaibhav Verma",
  "twitter": {
    "card": "summary_large_image",
    "description": "Notes, essays, build logs.",
    "images": [
      "/api/og?title=Writing&subtitle=Notes%2C+essays%2C+build+logs.",
    ],
    "title": "Writing — Vaibhav Verma",
  },
}
`;

exports[`postMetadata > builds title/description/canonical/og from a post 1`] = `
{
  "alternates": {
    "canonical": "/writing/hello-world",
  },
  "description": "A meta description.",
  "openGraph": {
    "description": "A meta description.",
    "images": [
      {
        "url": "/api/bloggz-media/hero.png",
      },
    ],
    "title": "Meta Title",
  },
  "title": "Meta Title",
  "twitter": {
    "card": "summary_large_image",
    "description": "A meta description.",
    "images": [
      "/api/bloggz-media/hero.png",
    ],
    "title": "Meta Title",
  },
}
`;
